--- a/EmailSignatures/ema_signature.html
+++ b/EmailSignatures/ema_signature.html
@@ -3,7 +3,7 @@
     style='width:300px;font-size:11.0pt;font-family:"Calibri","sans-serif";color:#0000AA'>
     <b>Arnaud DEMARCQ</b>
     <br/>
-    Tehnical Delivery Manager
+    Technical Delivery Manager
     <br/>
     Senior Architect
     <hr width="50px" align="left" />
