removes div fixed length

--- a/EmailSignatures/ema_signature.html
+++ b/EmailSignatures/ema_signature.html
@@ -1,16 +1,15 @@
 <div 
     lang="EN-GB"
-    style='width:300px;font-size:11.0pt;font-family:"Calibri","sans-serif";color:#0000AA'>
+    style='font-size:11.0pt;font-family:"Calibri","sans-serif";color:#0000AA'>
     <b>Arnaud DEMARCQ</b>
     <br/>
     Technical Delivery Manager
     <br/>
     Senior Architect
     <hr width="50px" align="left" />
-    Experian MicroAnalytics
-    <br/>
-    Athos Palace - 2 rue de la Lujerneta - Monaco, MC 98000
-    <hr/>
+    Experian MicroAnalytics<br/>
+    Athos Palace, 2 rue de la Lujerneta, Monaco, MC 98000
+    <hr width="300px" align="left" />
     <table >
         <!--
           <tr>
@@ -50,5 +49,5 @@
             </td>
         </tr>
     </table>
-    <hr/>
+    <hr width="300px" align="left" />
 </div>
