New ema signature

--- a/EmailSignatures/ema_signature_2018.html
+++ b/EmailSignatures/ema_signature_2018.html
@@ -3,9 +3,7 @@
     style="font-size:9.0pt;font-family:&quot;Arial&quot;,sans-serif;color:windowtext">
     <b>Arnaud DEMARCQ</b>
     <br/>
-    <i>Product Manager</i>
-    <br/>
-    <i>Senior Architect</i>
+    <i>Director of Product Development </i>
     <br/>
 	Experian MicroAnalytics
     <br/>
